@@ -24,6 +24,12 @@
     </text>
   </lang>
   <autodetect>
+    <usb>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>OfficeJet 5110v</model>
+      <description>Hewlett-Packard OfficeJet 5100 Series</description>
+      <commandset>MLC,PCL,PML</commandset>
+    </usb>
   </autodetect>
   <functionality>B</functionality>
   <driver>hpijs</driver>
