@@ -1,3 +1,8 @@
+2005-12-20  Tim Waugh <twaugh@redhat.com>
+
+	* printer/HP-OfficeJet_5110.xml: Added IEEE 1284 information (RH
+	  bug #176224).
+
 2005-12-09  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* PPD/Brother/*.ppd: Added 35 PPD files released under GPL by
